# vibefs

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  vibefs.db  vibefs.py
