[project]
name = "vibefs"
version = "0.1.0"
description = "A simple, secure file preview service with time-limited URLs"
requires-python = ">=3.14"
dependencies = [
    "bottle>=0.13.4",
    "click>=8.3.1",
    "pygments>=2.19.2",
]

[project.scripts]
vibefs = "vibefs:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
