[project]
name = "vibefs"
version = "0.4.0"
description = "A simple, secure file preview service with time-limited URLs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "reorx", email = "novoreorx@gmail.com" },
]
keywords = ["file-server", "preview", "cli", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
]
dependencies = [
    "bottle>=0.13.4",
    "click>=8.3.1",
    "pygments>=2.19.2",
]

[project.urls]
Homepage = "https://github.com/reorx/vibefs"
Repository = "https://github.com/reorx/vibefs"

[project.scripts]
vibefs = "vibefs:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
